compatibility-tests/compile-fail/tests/ui/attribute-misuse.stderr
error: `display` attribute is only valid on variants of an error enum, not on an enum
 --> $DIR/attribute-misuse.rs:5:13
  |
5 |     #[snafu(display("display should not work here"))]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `source(from)` attribute is only valid on fields of an error variant, not on an enum
 --> $DIR/attribute-misuse.rs:6:13
  |
6 |     #[snafu(source(from(XXXX, Box::new)))]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `source(bool)` attribute is only valid on fields of an error variant, not on an enum
 --> $DIR/attribute-misuse.rs:7:13
  |
7 |     #[snafu(source(true))]
  |             ^^^^^^^^^^^^

error: `backtrace` attribute is only valid on fields of an error variant, not on an enum
 --> $DIR/attribute-misuse.rs:8:13
  |
8 |     #[snafu(backtrace)]
  |             ^^^^^^^^^

error: `source` attribute is only valid on fields of an error variant, not on a variant
  --> $DIR/attribute-misuse.rs:20:46
   |
20 |         #[snafu(display("an error variant"), source(from(XXXX, Box::new)))]
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `source` attribute is only valid on fields of an error variant, not on a variant
  --> $DIR/attribute-misuse.rs:21:17
   |
21 |         #[snafu(source)]
   |                 ^^^^^^

error: `backtrace` attribute is only valid on fields of an error variant, not on a variant
  --> $DIR/attribute-misuse.rs:22:17
   |
22 |         #[snafu(backtrace)]
   |                 ^^^^^^^^^

error: `display` attribute is only valid on variants of an error enum, not on a field
  --> $DIR/attribute-misuse.rs:33:21
   |
33 |             #[snafu(display("display should not work here"))]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `visibility` attribute is only valid on an error enum and its variants, not on a field
  --> $DIR/attribute-misuse.rs:34:21
   |
34 |             #[snafu(visibility(pub))]
   |                     ^^^^^^^^^^^^^^^

error: Incompatible attributes [`source(false)`, `source(from)`] specified on a field
  --> $DIR/attribute-misuse.rs:36:21
   |
36 |             #[snafu(source(from(XXXX, Box::new)))]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `display` attribute is only valid on variants of an error enum, not on a struct
  --> $DIR/attribute-misuse.rs:49:13
   |
49 |     #[snafu(display("display should not work here"))]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `visibility` attribute is only valid on an error enum and its variants, not on a struct
  --> $DIR/attribute-misuse.rs:51:13
   |
51 |     #[snafu(visibility(pub))]
   |             ^^^^^^^^^^^^^^^

error: `source(bool)` attribute is only valid on fields of an error variant, not on a struct
  --> $DIR/attribute-misuse.rs:52:13
   |
52 |     #[snafu(source(true))]
   |             ^^^^^^^^^^^^

error: `backtrace` attribute is only valid on fields of an error variant, not on a struct
  --> $DIR/attribute-misuse.rs:53:13
   |
53 |     #[snafu(backtrace)]
   |             ^^^^^^^^^
